Fixed CV alignment issues.  Need to figure out <p> length weirdness.

--- a/css/sarah.css
+++ b/css/sarah.css
@@ -226,7 +226,7 @@ padding-top: 50px;
 
 #cvline {
   background-color: blue;
-  width: 25%;
+  width: 75%;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
